--- a/backend/package.json
+++ b/backend/package.json
@@ -10,10 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cloudinary": "^1.33.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "mongoose": "^6.9.0",
-    "node-modules": "^1.0.1"
+    "multer": "^1.4.5-lts.1",
+    "node-modules": "^1.0.1",
+    "sharp": "^0.31.3"
   }
 }
